@@ -1,21 +1,21 @@
 /* ==================================================================
  * JdtJavaCompilerTests.java - 27/04/2021 4:50:45 PM
- * 
+ *
  * Copyright 2021 SolarNetwork.net Dev Team
- * 
- * This program is free software; you can redistribute it and/or 
- * modify it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of 
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
  * the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, 
- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License 
- * along with this program; if not, write to the Free Software 
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
  * 02111-1307 USA
  * ==================================================================
  */
@@ -46,7 +46,7 @@ import net.solarnetwork.common.jdt.JdtJavaCompiler;
 
 /**
  * Test cases for the {@link JdtJavaCompiler} class.
- * 
+ *
  * @author matt
  * @version 1.0
  */
@@ -100,12 +100,12 @@ public class JdtJavaCompilerTests {
 
 		Class<?> clazz = result.loadClass("net.solarnetwork.common.jdt.test.Hello");
 		Method helloMethod = clazz.getDeclaredMethod("hello");
-		Object response = helloMethod.invoke(clazz.newInstance());
+		Object response = helloMethod.invoke(clazz.getDeclaredConstructor().newInstance());
 		assertThat("Greeting received", response, equalTo("world"));
 
 		clazz = result.loadClass("Root");
 		helloMethod = clazz.getDeclaredMethod("hello");
-		response = helloMethod.invoke(clazz.newInstance());
+		response = helloMethod.invoke(clazz.getDeclaredConstructor().newInstance());
 		assertThat("Greeting received", response, equalTo("I am root."));
 	}
 
